--- a/Индексы.md
+++ b/Индексы.md
@@ -14,6 +14,12 @@ where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and
 перечислите узкие места;
 оптимизируйте запрос: внесите корректировки по использованию операторов, при необходимости добавьте индексы.
 
+Решение:
+Узкие места
+Nested Loop Join - это относительно медленный метод соединения таблиц.
+Partitioned aggregation - это эффективный метод агрегации данных, но он может быть медленным, если количество строк в каждой части велико.
+
+Оптимизация
 ![image](https://github.com/Franky12111990/sdb-homeworks/assets/121640886/340c3b54-1682-4241-8636-58cff1e2dc88)
 
 после оптимизации разница колоссальная 
